# Natural-Terrain-Generator

./: .gitignore  Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
bench/: Cargo.toml
bench/benches/: benches.rs
core/: Cargo.toml
core/examples/: noise_demo2d.rs  noise_visualization.rs  terrain_final.rs  terrain_image.rs  terrain_pipeline_images.rs
core/src/: domain_warp.rs  erosion2.rs  fractal2.rs  lib.rs  perlin2.rs  perlin3.rs  simplex2.rs  utils.rs
storage/: Cargo.toml
storage/examples/: roundtrip2d.rs
storage/src/: lib.rs  models.rs
storage/tests/: roundtrip_test.rs
