[package]
name = "storage"
version = "0.1.0"
edition = "2024"

[dependencies]
mongodb = "3.2.4"
bson = "2.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
core = { path = "../core" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }